# Alg

./: CMakeLists.txt  CMakeLists.txt.user.4218b6b  GraphDecimator.pro  browser.cpp  browser.h  datadecimator.cpp  datadecimator.h  graph.cpp  graph.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  util.cpp
